test/good/functions/lambda22.px

f = lambda def
    print 1

f()
