test/bad/lambdas/call03.px

f = lambda: true * false
f()
